crates/biome_cli/tests/snapshots/main_cases_reporter_concise/reports_diagnostics_concise_check_command.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check --reporter=concise main.ts index.ts
```

## `index.ts`

```ts
import { z} from "z"
import { z, b , a} from "lodash"

a ==b

debugger

let f;
		let f;
```

## `main.ts`

```ts
import { z} from "z"
import { z, b , a} from "lodash"

a ==b

debugger

let f;
		let f;
```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
! index.ts:1:8: lint/correctness/noUnusedImports: This import is unused.
```

```block
! index.ts:2:10: lint/correctness/noUnusedImports: Several of these imports are unused.
```

```block
! index.ts:8:5: lint/correctness/noUnusedVariables: This variable f is unused.
```

```block
! index.ts:9:7: lint/correctness/noUnusedVariables: This variable f is unused.
```

```block
! main.ts:1:8: lint/correctness/noUnusedImports: This import is unused.
```

```block
! main.ts:2:10: lint/correctness/noUnusedImports: Several of these imports are unused.
```

```block
! main.ts:8:5: lint/correctness/noUnusedVariables: This variable f is unused.
```

```block
! main.ts:9:7: lint/correctness/noUnusedVariables: This variable f is unused.
```

```block
× index.ts:1:1: assist/source/organizeImports: Sort these imports.
```

```block
× index.ts:4:3: lint/suspicious/noDoubleEquals: Using == may be unsafe if you are relying on type coercion.
```

```block
× index.ts:6:1: lint/suspicious/noDebugger: This is an unexpected use of the debugger statement.
```

```block
× index.ts:8:5: lint/suspicious/noImplicitAnyLet: This variable implicitly has the any type.
```

```block
× index.ts:9:7: lint/suspicious/noImplicitAnyLet: This variable implicitly has the any type.
```

```block
× index.ts:2:10: lint/suspicious/noRedeclare: 'z' is redeclared in the same scope.
```

```block
× index.ts:9:7: lint/suspicious/noRedeclare: 'f' is redeclared in the same scope.
```

```block
× index.ts: format: Formatter would have printed the following content:
```

```block
× main.ts:1:1: assist/source/organizeImports: Sort these imports.
```

```block
× main.ts:4:3: lint/suspicious/noDoubleEquals: Using == may be unsafe if you are relying on type coercion.
```

```block
× main.ts:6:1: lint/suspicious/noDebugger: This is an unexpected use of the debugger statement.
```

```block
× main.ts:8:5: lint/suspicious/noImplicitAnyLet: This variable implicitly has the any type.
```

```block
× main.ts:9:7: lint/suspicious/noImplicitAnyLet: This variable implicitly has the any type.
```

```block
× main.ts:2:10: lint/suspicious/noRedeclare: 'z' is redeclared in the same scope.
```

```block
× main.ts:9:7: lint/suspicious/noRedeclare: 'f' is redeclared in the same scope.
```

```block
× main.ts: format: Formatter would have printed the following content:
```

```block
Checked 2 files in <TIME>. No fixes applied.
Found 16 errors.
Found 8 warnings.
```
